<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/header" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_margin="15dp"
        android:gravity="center"
        android:text="@string/game_details"
        android:textColor="@android:color/black"
        android:textSize="18dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="8dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".6"
                android:text="@string/player_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/name_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sample"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".6"
                android:text="@string/jackpot"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/jackpot_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sample"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".6"
                android:text="@string/date"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/date_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sample"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />


        </TableRow>
    </LinearLayout>

</LinearLayout>