<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:gravity="bottom"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:gravity="center"
        android:innerRadius="0dp"
        android:shape="ring"
        android:thicknessRatio="2"
        app:cardCornerRadius="60dp">

        <ImageView
            android:id="@+id/user_img"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_below="@+id/edit_profile"
            android:scaleType="fitXY" />

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="8dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".6"
                android:paddingTop="8dp"
                android:text="@string/player_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/username_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="8dp"
                android:text="@string/sample"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".6"
                android:paddingTop="8dp"
                android:text="@string/balance"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/balance_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="8dp"
                android:text="@string/sample"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </TableRow>

        <TableRow
            android:id="@+id/date_visibility"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".6"
                android:paddingTop="8dp"
                android:text="@string/last_login"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/last_login_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="8dp"
                android:text="@string/sample"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </TableRow>

    </LinearLayout>
</LinearLayout>
